# elastic-demo-env

./: .env  .gitignore  README.md  docker-compose.yml  elastic-demo-env.sln
app/: dockerfile  main.py
app-east/analytics/: dockerfile  main.py  requirements.txt
app-east/catalog/: dockerfile  pom.xml
app-east/catalog/src/main/java/com/demo/catalog/: CatalogApplication.java  CatalogController.java
app-east/catalog/src/main/resources/: application.yml  logback-spring.xml
app-east/gateway/: dockerfile  main.py  requirements.txt
app-east/gateway/templates/: index.html
app-east/inventory/: dockerfile  go.mod  main.go
app-east/orders/: Gemfile  app.rb  config.ru  dockerfile
app-east/pricing/: Program.cs  appsettings.json  dockerfile  east-pricing.csproj
app-east/pricing/Controllers/: PricingController.cs
app-east/recommendations/: Cargo.toml  dockerfile
app-east/recommendations/src/: main.rs
app-east/reviews/: composer.json  dockerfile
app-east/reviews/public/: index.php
app/templates/: index.html
compose/: cluster-east-prod.yml  cluster-east.yml  cluster-west.yml  fleet.yml  setup.yml
config/: auditbeat.yml  east-filebeat.yml  east-metricbeat.yml  heartbeat.yml  kibana-east.yml  kibana.yml  landing-nginx.conf  packetbeat.yml  west-filebeat.yml  west-metricbeat.yml
html/: index.html
loadgen/: loadgen.sh
