[package]
name = "east-recommendations"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
opentelemetry = { version = "0.22", features = ["trace"] }
opentelemetry_sdk = { version = "0.22", features = ["rt-tokio", "trace"] }
opentelemetry-otlp = { version = "0.15", features = ["trace", "http-proto"] }
opentelemetry-semantic-conventions = "0.14"
tracing-opentelemetry = "0.23"
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
